# kbdmod

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  PKGBUILD  README.md  install.sh  test.sh
doc/: examples.md  myLaptopConf.yaml  testing.yml
headers/: consumption.h  execution_queue.h  init.h  input_loop.h  io.h  key.h  mapping.h  timer.h  version.h
src/: actions.h  autoshift.cpp  autoshift.h  command.cpp  command.h  config.cpp  config.h  constexpr.cpp  constexpr.h  consumption.cpp  consumption.h  execution_queue.cpp  execution_queue.h  features.h  headers.h  init.cpp  init.h  input_loop.cpp  input_loop.h  io.cpp  io.h  io_macro.h  key.cpp  key.h  key_state.h  layer.cpp  layer.h  main.cpp  mapping.cpp  mapping.h  mapping_def.h  timer.cpp  timer.h  types.h
test/: combinations.txt  compare.cpp  compare.out  expected_output.txt  input.txt  manual_testing.yaml  test.cpp  test.sh  test_manual.sh  testing.yaml  testing.yml  udevmon.yaml  udevmon_example.yaml
